Refactors and code updates